argocd-apps/demo-app-kuard/kuard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
  namespace: kurad
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: kuard
